# petri.rs

./: .gitignore  Cargo.toml  README.md  leanpkg.toml  test_all.sh
examples/: export_dot.rs  semaphore.petri  semaphore.rs  simple.petri
network/: Cargo.toml
network/src/: graph.rs  lib.rs  network.rs
network/src/builder/: mod.rs  structures.rs
network/src/network/: data.rs  export_dot.rs  mod.rs
proofs/: reverse-union.lean  reverse-union.olean
render/: Cargo.toml
render/src/: lib.rs
src/: graph.rs  lib.rs  main.rs  network.rs  parser.rs
src/builder/: mod.rs  structures.rs
src/graph/: edge_map.rs  mod.rs  standing_distribution.rs
src/network/: data.rs  export_dot.rs  mod.rs  transition.rs
src/simulator/: exhaustive_brancher.rs  mod.rs  recursive_brancher.rs  simple.rs
