[package]
name = "petri_network"
version = "0.1.0"
edition = "2021"
license = "MIT OR GPL-3.0-or-later"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dot-writer = { version = "0.1.2", optional = true }

[features]
default = []
conflict_fast = []
conflict_normal = []
conflict_slow = []

export_dot = ["dot-writer"]

[lib]
path = "network/src/lib.rs"

[workspace]
members = [
    "render"
]

[[example]]
name = "export_dot"
required-features = ["export_dot"]
