[package]
name = "petri_network"
version = "0.1.0"
edition = "2021"
license = "MIT OR GPL-3.0-or-later"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dot-writer = { version = "0.1.2" }
rand = "0.8.5"

[lib]
path = "src/lib.rs"

[workspace]
members = [
    "render"
]

[[example]]
name = "export_dot"
required-features = ["export_dot"]
